Introduccion de un h1 y un p

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Mi Pagina Web</title>
 </head>
 <body>
-    
+    <h1>Hola</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, cum. Quia sint mollitia non corporis libero delectus cupiditate assumenda reprehenderit, consequatur recusandae dicta atque distinctio adipisci alias eligendi nesciunt consectetur.</p>
 </body>
 </html>
